--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@types/cytoscape": "^3.21.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cytoscape": "^3.29.2",
+    "lucide-react": "^0.424.0",
     "neo4j-driver": "^5.21.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
